master added new method for monitoring platform wallets
